2008-09-12
	fixed some redirection issues
	switched to templo2
	added Group.canRegister
	some minor fixes in default.css
	
2008-05-07
	fixed translated links : use default lang

2008-05-02
	added tools.ApiSync
	added scriptable nodes (clic and id)
	fixes in Editor list handling

2008-04-26
	remoting api

Base
	title is separate
	create/edit in hierarchy
	allow rename
	display sitemap (rec.tree in mtt ???)
	rename / changing title versioning
	rename : allow / for reparenting
	skinable
	custom syntax with realtime preview
	links handling
	cascade updates for referenced content/title
	file upload
	images insert
	menu
	swf insert
	allow to list some directory content
	dependency id-cache
	directory list dependency
	fill title cache on edit
	custom span classes
	restore deleted version
	multilang
	latest changes list
	changes for all languages
	rename should rename all langs
	show diff in history
	backlinks
	user subscribe
	user : infos + changes history
	user group rights : global + per file/dir
	search